--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.keshavanarasappa.androidproject">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -9,10 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main.MainActivity" android:label="@string/app_name"
-            android:launchMode="singleTop" android:configChanges="keyboardHidden|orientation|screenSize">
+        <activity
+            android:name=".Main.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -22,7 +27,7 @@
             android:parentActivityName=".Main.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity"/>
+                android:value=".Main.MainActivity" />
         </activity>
         <activity
             android:name=".Recycler.RecyclerActivity"
@@ -30,7 +35,7 @@
             android:parentActivityName=".Main.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity"/>
+                android:value=".Main.MainActivity" />
         </activity>
         <activity
             android:name=".Recycler.PhotoActivity"
@@ -38,7 +43,7 @@
             android:parentActivityName=".Recycler.RecyclerActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Recycler.RecyclerActivity"/>
+                android:value=".Recycler.RecyclerActivity" />
         </activity>
         <activity
             android:name=".Search.DetailActivity"
@@ -46,7 +51,7 @@
             android:parentActivityName=".Search.SearchActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity"/>
+                android:value=".Main.MainActivity" />
         </activity>
         <activity
             android:name=".AdaptiveLayout.AdaptiveLayoutActivity"
@@ -54,8 +59,10 @@
             android:parentActivityName=".Main.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity"/>
+                android:value=".Main.MainActivity" />
         </activity>
+        <activity android:name=".User.LoginActivity" />
+        <activity android:name=".User.RegisterActivity"></activity>
     </application>
 
 </manifest>
