--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,19 +27,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    useLibrary  'org.apache.http.legacy'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.loopj.android:android-async-http:1.4.4'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.google.android:flexbox:0.3.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    testImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
