--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         <activity
             android:name=".Main.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name"
-            android:launchMode="singleTop">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,35 +22,19 @@
         </activity>
         <activity
             android:name=".Search.SearchActivity"
-            android:label="@string/activity_search"
-            android:parentActivityName=".Main.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity" />
+            android:label="@string/activity_search">
         </activity>
         <activity
             android:name=".Recycler.RecyclerActivity"
-            android:label="@string/activity_recycler"
-            android:parentActivityName=".Main.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity" />
+            android:label="@string/activity_recycler">
         </activity>
         <activity
             android:name=".Recycler.PhotoActivity"
-            android:label="@string/activity_photos"
-            android:parentActivityName=".Recycler.RecyclerActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Recycler.RecyclerActivity" />
+            android:label="@string/activity_photos">
         </activity>
         <activity
             android:name=".Search.DetailActivity"
-            android:label="@string/activity_details"
-            android:parentActivityName=".Search.SearchActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity" />
+            android:label="@string/activity_details">
         </activity>
         <activity
             android:name=".AdaptiveLayout.AdaptiveLayoutActivity"
