--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,20 +29,16 @@
         </activity>
         <activity
             android:name=".Search.SearchActivity"
-            android:label="@string/activity_search">
-        </activity>
+            android:label="@string/activity_search" />
         <activity
             android:name=".Recycler.RecyclerActivity"
-            android:label="@string/activity_recycler">
-        </activity>
+            android:label="@string/activity_recycler" />
         <activity
             android:name=".Recycler.PhotoActivity"
-            android:label="@string/activity_photos">
-        </activity>
+            android:label="@string/activity_photos" />
         <activity
             android:name=".Search.DetailActivity"
-            android:label="@string/activity_details">
-        </activity>
+            android:label="@string/activity_details" />
         <activity
             android:name=".AdaptiveLayout.AdaptiveLayoutActivity"
             android:label="@string/activity_adaptive"
@@ -54,6 +57,21 @@
         </activity>
         <activity android:name=".User.LoginActivity" />
         <activity android:name=".User.RegisterActivity" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".Maps.MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
