Implemented ML kit with Firebase interation for text recognition

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,16 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlinx-serialization'
-
 apply plugin: 'realm-android'
-
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 27
     defaultConfig {
+        def uniqueAppId = "androidprojectkeshav"
+
         applicationId "com.example.keshavanarasappa.androidproject"
         minSdkVersion 26
         targetSdkVersion 27
@@ -57,6 +55,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.google.android.gms:play-services-places:15.0.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
 }
 
 repositories {
