--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,12 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
+
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
+
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:palette-v7:27.1.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
 
 repositories {
