--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -55,8 +54,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Main.MainActivity" />
         </activity>
-        <activity android:name=".User.LoginActivity" />
-        <activity android:name=".User.RegisterActivity" />
+        <activity android:name=".User.LoginActivity"
+            android:label="@string/login" />
+        <activity android:name=".User.RegisterActivity"
+            android:label="@string/register" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -72,9 +73,12 @@
         <activity
             android:name=".Maps.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".ML_Firebase.MLKitFirebaseActivity" />
-        <activity android:name=".MaterialDesign.MaterialDesignActivity" />
-        <activity android:name=".MaterialDesign.MaterialDesignDetailActivity"></activity>
+        <activity android:name=".ML_Firebase.MLKitFirebaseActivity"
+            android:label="@string/mlkit_firebase" />
+        <activity android:name=".MaterialDesign.MaterialDesignActivity"
+            android:label="@string/material_design"/>
+        <activity android:name=".MaterialDesign.MaterialDesignDetailActivity"
+            android:label="@string/material_design_detail"/>
     </application>
 
 </manifest>
