--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,72 +12,82 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".common.BaseActivity" />
         <activity
-            android:name=".Main.MainActivity"
+            android:name=".main.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="java-lang-programming"
+                    android:scheme="android-app-google-plus-demo" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".Search.SearchActivity"
+            android:name=".search.SearchActivity"
             android:label="@string/activity_search" />
         <activity
-            android:name=".Recycler.RecyclerActivity"
+            android:name=".recycler.RecyclerActivity"
             android:label="@string/activity_recycler" />
         <activity
-            android:name=".Recycler.PhotoActivity"
+            android:name=".recycler.PhotoActivity"
             android:label="@string/activity_photos" />
         <activity
-            android:name=".Search.DetailActivity"
+            android:name=".search.DetailActivity"
             android:label="@string/activity_details" />
         <activity
-            android:name=".AdaptiveLayout.AdaptiveLayoutActivity"
+            android:name=".adaptivelayout.AdaptiveLayoutActivity"
             android:label="@string/activity_adaptive"
-            android:parentActivityName=".Main.MainActivity">
+            android:parentActivityName=".main.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity" />
+                android:value=".main.MainActivity" />
         </activity>
         <activity
-            android:name=".ViewPager.ViewPagerActivity"
+            android:name=".viewpager.ViewPagerActivity"
             android:label="@string/activity_viewpager"
-            android:parentActivityName=".Main.MainActivity">
+            android:parentActivityName=".main.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Main.MainActivity" />
+                android:value=".main.MainActivity" />
         </activity>
-        <activity android:name=".User.LoginActivity"
-            android:label="@string/login" />
-        <activity android:name=".User.RegisterActivity"
+        <activity android:name=".user.LoginActivity"
+            android:label="@string/logged_in" />
+        <activity android:name=".user.RegisterActivity"
             android:label="@string/register" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
+<!--
+     The API key for Google Maps-based APIs is defined as a string resource.
+     (See the file "res/values/google_maps_api.xml").
+     Note that the API key is linked to the encryption key used to sign the APK.
+     You need a different API key for each encryption key, including the release key that is used to
+     sign the APK for publishing.
+     You can define the keys for the debug and release targets in src/debug/ and src/release/.
+-->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".Maps.MapsActivity"
+        <activity android:name=".maps.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".ML_Firebase.MLKitFirebaseActivity"
+        <activity android:name=".mlfirebase.MLKitFirebaseActivity"
             android:label="@string/mlkit_firebase" />
-        <activity android:name=".MaterialDesign.MaterialDesignActivity"
+        <activity android:name=".materialdesign.MaterialDesignActivity"
             android:label="@string/material_design"/>
-        <activity android:name=".MaterialDesign.MaterialDesignDetailActivity"
+        <activity android:name=".materialdesign.MaterialDesignDetailActivity"
             android:label="@string/material_design_detail"/>
     </application>
 
