--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     useLibrary 'org.apache.http.legacy'
 }
 
@@ -62,6 +66,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
 
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
+
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
 }
 
 repositories {
