--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".room.RoomDatabaseApplication"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,11 +25,13 @@
             android:name=".main.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
@@ -65,30 +68,41 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".main.MainActivity" />
         </activity>
-        <activity android:name=".user.LoginActivity"
+        <activity
+            android:name=".user.LoginActivity"
             android:label="@string/logged_in" />
-        <activity android:name=".user.RegisterActivity"
+        <activity
+            android:name=".user.RegisterActivity"
             android:label="@string/register" />
-<!--
+        <!--
      The API key for Google Maps-based APIs is defined as a string resource.
      (See the file "res/values/google_maps_api.xml").
      Note that the API key is linked to the encryption key used to sign the APK.
      You need a different API key for each encryption key, including the release key that is used to
      sign the APK for publishing.
      You can define the keys for the debug and release targets in src/debug/ and src/release/.
--->
+        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".maps.MapsActivity"
+        <activity
+            android:name=".maps.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".mlfirebase.MLKitFirebaseActivity"
+        <activity
+            android:name=".mlfirebase.MLKitFirebaseActivity"
             android:label="@string/mlkit_firebase" />
-        <activity android:name=".materialdesign.MaterialDesignActivity"
-            android:label="@string/material_design"/>
-        <activity android:name=".materialdesign.MaterialDesignDetailActivity"
-            android:label="@string/material_design_detail"/>
+        <activity
+            android:name=".materialdesign.MaterialDesignActivity"
+            android:label="@string/material_design" />
+        <activity
+            android:name=".materialdesign.MaterialDesignDetailActivity"
+            android:label="@string/material_design_detail" />
+        <activity android:name=".room.RoomDatabaseActivity"
+            android:label="@string/room_contacts"/>
     </application>
 
 </manifest>
