--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,23 +40,10 @@ dependencies {
     implementation 'com.android.support:palette-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
-
-    implementation 'com.loopj.android:android-async-http:1.4.4'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.android.support:support-v4:27.1.1'
-    annotationProcessor 'dk.ilios:realmfieldnameshelper:1.1.1'
-    implementation 'io.realm:android-adapters:2.1.0'
-    implementation 'com.nshmura:recyclertablayout:1.5.0'
 
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.google.android.gms:play-services-places:15.0.1'
@@ -64,6 +51,20 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
+
+    testImplementation 'com.android.support.test:runner:1.0.2'
+    implementation 'com.loopj.android:android-async-http:1.4.4'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    annotationProcessor 'dk.ilios:realmfieldnameshelper:1.1.1'
+    implementation 'io.realm:android-adapters:2.1.0'
+    implementation 'com.nshmura:recyclertablayout:1.5.0'
 
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
 
