--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,15 +37,22 @@ androidExtensions {
     experimental = true
 }
 
+ext {
+    room_version = "1.1.1"
+    support_version = "27.1.1"
+    exoplayer_version = "2.7.0"
+    anko_version = "0.10.4"
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:palette-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support:palette-v7:$support_version"
+    implementation "com.android.support.constraint:constraint-layout:1.1.2"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:support-v4:$support_version"
 
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
@@ -56,6 +63,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
 
+    implementation 'com.android.support:support-v13:27.1.1'
     testImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.loopj.android:android-async-http:1.4.4'
     implementation 'com.squareup.picasso:picasso:2.5.2'
@@ -63,7 +71,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.anko:anko:$anko_version"
 
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     annotationProcessor 'dk.ilios:realmfieldnameshelper:1.1.1'
@@ -72,11 +82,15 @@ dependencies {
 
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
 
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    kapt "android.arch.persistence.room:compiler:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
-    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    androidTestImplementation "android.arch.persistence.room:testing:$room_version"
+    androidTestImplementation "android.arch.core:core-testing:$room_version"
+
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
+    implementation "com.google.android.exoplayer:extension-mediasession:$exoplayer_version"
 }
 
 repositories {
