Implemented Bottom navigation bar with Photo editing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,9 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
     implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
     implementation "com.google.android.exoplayer:extension-mediasession:$exoplayer_version"
+
+    implementation 'info.androidhive:imagefilters:1.0.7'
+    implementation 'com.karumi:dexter:5.0.0'
 }
 
 repositories {
